--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.2.1",
     "vinyl-paths": "^2.1.0",
-    "yargs": "^4.7.1"
+    "yargs": "^4.7.1",
+    "browser-sync": "^2.13.0"
   },
   "jspm": {
     "registry": "npm",
