--- a/sample/package.json
+++ b/sample/package.json
@@ -6,6 +6,7 @@
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-rc.1.0.0",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-rc.1.0.0",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-rc.1.0.0",
+      "css": "github:systemjs/plugin-css@^0.1.23",
       "font-awesome": "npm:font-awesome@^4.6.3",
       "twbs/bootstrap": "github:twbs/bootstrap@3.3.6"
     },
